public static class AnimadorParametros
{
	public const string Caminando = "Caminando";

	public const string Saltando = "Saltando";

	public const string Vivo = "Vivo";

	public const string AdvertirAtaqueEnemigo = "AdvertirAtaqueEnemigo";

	public const string Golpeado = "Golpeado";

	public const string Atacando = "Atacando";

	public const string EnBatalla = "EnBatalla";

	public const string Talando = "Talando";

	public const string Minando = "Minando";

	public const string Nivel = "Nivel";

	public const string IdEnemigo = "IdEnemigo";

	public const string EstaColisionado = "EstaColisionado";
}